# space-game

./: .gitignore  README.md  meson.build
src/: asteroid.cpp  asteroid.hpp  button.cpp  button.hpp  colors.h  compile_commands.json  dynamic_object.hpp  esh.h  esh_error.cpp  esh_error.h  game.cpp  game.hpp  game_over_scene.cpp  game_over_scene.hpp  globals.h  label.cpp  label.hpp  main.cpp  menu_scene.cpp  menu_scene.hpp  object.hpp  object_name_table.h  observer.hpp  play_scene.cpp  play_scene.hpp  player.cpp  player.hpp  projectile.cpp  projectile.hpp  scene.hpp  sprite_sheet.cpp  sprite_sheet.hpp  sprite_table_names.h  subject.hpp  tags  texture.cpp  texture.hpp  timer.cpp  timer.h  vector2d.hpp  (+2 more)
